@@ -16,11 +16,8 @@ function (xml = NULL, xml.parsed = NULL, xmlnodeset = NULL, hit = NULL,
                 quals$Name[i] <- qlist[qlist$QualificationTypeId == 
                   quals$QualificationTypeId[i], "Qualification"]
             }
-            else {
-                #quals$Name[i] <- GetQualificationType(quals$QualificationTypeId[i], 
-                #    print = FALSE, sandbox = sandbox)$Name
-				quals$Name[i] <- NA
-            }
+            else
+                quals$Name[i] <- NA
             quals$Comparator[i] <- xmlValue(xmlChildren(xmlnodeset[[i]])$Comparator)
             if ("LocaleValue" %in% names(xmlChildren(xmlnodeset[[i]]))) 
                 quals$Value[i] <- xmlValue(xmlChildren(xmlnodeset[[i]])$LocaleValue)
